--- a/package.json
+++ b/package.json
@@ -3,13 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "sh deploy.sh"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "babel-plugin-component": "^1.1.1",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "echarts": "^5.6.0",
+    "element-ui": "2.15.14",
+    "gh-pages": "^6.3.0",
+    "moment": "^2.30.1",
+    "node-xlsx": "^0.24.0",
+    "sass": "^1.83.4",
+    "sass-loader": "^16.0.4",
+    "vue": "^2.6.14",
+    "vue-router": "3.6.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
